# c-practice

convay_game_of_life/: 2d_arrays.cpp  CMakeLists.txt  grid.cc  main.cc
fileandio/: CMakeLists.txt  files.cpp
io_cmake/: CMakeLists.txt  demo.cpp
leetcode/: 3sum.cpp  add_two_numbers.cpp  anagram.cpp  copy_list_random_pointer.cpp  gas_station.cpp  gol.cpp  h_index.cpp  insert_interval.cpp  isomorphic.cpp  jump_game.cpp  jump_game2.cpp  linked_list_cycle.cpp  linkedlist_reverse.py  longestsubstring.cpp  majority_element.cpp  max_area.cpp  max_profit.cpp  max_profit2.cpp  max_sq_area.cpp  merge_intervals.cpp  merge_sorted_array.cpp  merge_sorted_array2.cpp  merge_sorted_lists.cpp  min_arrows.cpp  min_stack.cpp  minsubarray.cpp  palindrome.cpp  product_array.cpp  randomized_set.cpp  ransom_note.cpp  remove_duplicates.cpp  remove_duplicates2.cpp  remove_element.cpp  reverse_linkedlist.cpp  reverse_linkedlist2.cpp  reverse_polish_notation.cpp  rotate.cpp  rotate_array.cpp  setzeros.cpp  simplify_path.cpp  (+8 more)
local_variables/: CMakeLists.txt  classes.cpp  dec_init.cpp  iterator.cpp  local_variables.cpp  numeric.cpp
strings/: CMakeLists.txt  string.cpp
